--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-addons-test-utils": "^0.14.0",
     "react-bootstrap": "^0.27.3",
     "react-component-metadata": "^1.2.2",
+    "react-create-class": "^1.0.0",
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.2.7",
     "release-script": "^0.2.1",
